@@ -9,6 +9,9 @@ while (! `nc -z eurekapeer1 $EUREKASERVICE_PORT`) && (! `nc -z eurekapeer2 $EURE
 echo "--> Eureka service has started"
 
 echo "-> Starting Cloud Config service with Eureka endpoint: $EUREKASERVICE_URI"
-java    -Djava.security.egd=file:/dev/./urandom \
+java    -XX:+PrintFlagsFinal \
+        -XX:+UnlockExperimentalVMOptions \
+        -XX:+UseCGroupMemoryLimitForHeap \
+        -Djava.security.egd=file:/dev/./urandom \
         -Deureka.client.serviceUrl.defaultZone=$EUREKASERVICE_URI \
         -jar /usr/local/config-service/@springBootJar@
